<resources>
    <string name="app_name">RUCafe</string>
    <string name="RUCafeText">RUCafe</string>
    <string name="CoffeeMenuText">Coffee Menu</string>
    <string name="RUCafeLogo">RUCafeLogo</string>

    <string name="main_menu">Main Menu</string>
    <string name="subTotalText">Subtotal: $%.2f</string>
    <string name="total_amount">Total Amount: $%.2f</string>
    <string name="sales_tax">Sales Tax: $%.2f</string>

    <string name="coffee_image">Coffee Image</string>
    <string name="coffee_imagebutton">Coffee ImageButton</string>
    <string name="type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="addToOrder">Add to Order</string>
    <string name="caramelText">Caramel</string>
    <string name="addInText">Add-in:</string>
    <string name="sweet_cream">Sweet Cream</string>
    <string name="irish_cream">Irish Cream</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="mocha">Mocha</string>
    <string name="coffee_added_to_order_message">Coffee item was added to the order.</string>
    <string name="current_order">Current Order</string>

    <string name="currentOrder_imagebutton">Current Order Image</string>
    <string name="order_placed">The order has been placed.</string>
    <string name="place_order">Place Order</string>
    <string name="subtotal">subtotal</string>
    <string name="salestax">salesTax</string>
    <string name="totalamount">Total Amount</string>
    <string name="all_orders">All Orders</string>
    <string name="cancel_selected_order">Cancel Selected Order</string>

    <string name="breadText">Bread</string>
    <string name="proteinText">Protein</string>
    <string name="addOnText">Add On:</string>
    <string name="sandwichMenuText">Sandwich Menu</string>
    <string name="onion">Onion</string>
    <string name="cheese">Cheese</string>
    <string name="tomato">Tomato</string>
    <string name="lettuce">Lettuce</string>
    <string name="sandwich_added_to_order_message">Sandwich item was added to the order.</string>
    <string name="plus_sign">+</string>
    <string name="donut_image">Donut Image</string>
    <string name="view_items_selected">View Items Selected</string>
    <string name="add_selected_items">Add selected items to order</string>
    <string name="addText">add</string>
    <string name="image_of_row">image of row</string>
    <string name="sandwich_image_button">sandwich image button</string>
    <string name="all_orders_button">all orders button</string>

    <string-array name="coffee_sizes_array">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>

    <string-array name="coffee_quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="sandwich_bread_array">
        <item>Bagel</item>
        <item>Wheat</item>
        <item>Sour Dough</item>
    </string-array>

    <string-array name="sandwich_protein_array">
        <item>Beef</item>
        <item>Fish</item>
        <item>Chicken</item>
    </string-array>

    <string-array name="tv_donutLabels">
        <item>Yeast Donut: Chocolate Frosted</item>
        <item>Yeast Donut: Glazed</item>
        <item>Yeast Donut: Jelly</item>
        <item>Yeast Donut: Lemon Filled</item>
        <item>Yeast Donut: Strawberry Frosted</item>
        <item>Yeast Donut: Sugar</item>
        <item>Cake Donut: Blueberry</item>
        <item>Cake Donut: Cinnamon</item>
        <item>Cake Donut: Old Fashion</item>
        <item>Donut Holes: Cinnamon</item>
        <item>Donut Holes: Glazed</item>
        <item>Donut Holes: Jelly</item>
    </string-array>

    <string-array name="donutFlavors">
        <item>Chocolate Frosted</item>
        <item>Glazed</item>
        <item>Jelly</item>
        <item>Lemon Filled</item>
        <item>Strawberry Frosted</item>
        <item>Sugar</item>
        <item>Blueberry</item>
        <item>Cinnamon</item>
        <item>Old Fashion</item>
        <item>Cinnamon</item>
        <item>Glazed</item>
        <item>Jelly</item>
    </string-array>

    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>



</resources>