<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/RUCafeImage"
        android:layout_width="247dp"
        android:layout_height="196dp"
        android:contentDescription="@string/RUCafeLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014"
        app:srcCompat="@drawable/logo1" />

    <ImageButton
        android:id="@+id/coffeeButton"
        android:layout_width="142dp"
        android:layout_height="129dp"
        android:background="@null"
        android:contentDescription="@string/coffee_imagebutton"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/coffee1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/RUCafeImage"
        app:layout_constraintVertical_bias="0.354" />

    <ImageButton
        android:id="@+id/sandwichButton"
        android:layout_width="144dp"
        android:layout_height="147dp"
        android:background="@null"
        android:contentDescription="@string/sandwich_image_button"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sandwich1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/currentOrderButton"
        android:layout_width="142dp"
        android:layout_height="129dp"
        android:background="@null"
        android:contentDescription="@string/currentOrder_imagebutton"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/current_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/RUCafeImage"
        app:layout_constraintVertical_bias="0.739" />

    <ImageButton
        android:id="@+id/donutButton"
        android:layout_width="142dp"
        android:layout_height="129dp"
        android:background="@null"
        android:contentDescription="@string/donut_image"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/donut1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/RUCafeImage"
        app:layout_constraintVertical_bias="0.547" />

    <ImageButton
        android:id="@+id/allOrdersButton"
        android:layout_width="142dp"
        android:layout_height="131dp"
        android:background="@null"
        android:contentDescription="@string/all_orders_button"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/all_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/RUCafeImage"
        app:layout_constraintVertical_bias="0.737"
        tools:ignore="RedundantDescriptionCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>